# CopyWriter-AI-Agent

./: .env_example  .gitignore  README.md  agent.py  pyproject.toml  requirements.txt
agent_ai_copywriter/: agentstate.py  nodes.py
