[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nome_pacchetto"
version = "0.1.0"
description = "Descrizione del tuo progetto"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    pydantic
    langgraph
    langchain-groq
    markdown
    python-dotenv
]